# spinorAPI

./: .gitignore  CMakeLists.txt  main.cpp
